	Go-To-Line menu.
	* global.c (shortcut_init): Delete a misplaced setting of 'currmenu'.
	* global.c (shortcut_init, strtomenu): Cosmetic tweaks.
	* doc/syntax/{changelog,c,po}.nanorc: Some small extra colourings.
	* configure.ac, doc/texinfo/nano.texi: Make --enable-tiny disable
	the use of libmagic, and document the --disable-libmagic flag.

2014-04-10  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/Makefile.am: Add four recent syntaxes to the packlist.

2014-04-08  Benno Schulenberg  <bensberg@justemail.net>
	* doc: Add the documentation for the new --noread option.
	* doc: Add missing --poslog option to the texinfo file, plus tweaks.

2014-04-08  Hans Alves  <fonsvandeachterburen@gmail.com>
	* nano.h, files.c, nano.c: Adding the command-line option --noread
	to treat any name on the command line as a new file.  This allows
	nano to write to named pipes -- it will start with a blank buffer,
	and will write to the pipe when the user saves the file.  This way
	nano can be used as an editor in combination with for instance gpg
	without having to write sensitive data to disk first.

2014-04-08  David Lawrence Ramsey  <pooka109@gmail.com>
	* src/*.c: More editing of comment blocks and trimming of blank lines.

2014-04-08  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c: Correct two comments, and tweak two others.
	* src/color.c (color_update): Correct one comment, tweak some others,
	remove two superfluous ones, and remove an unneeded 'if'.

2014-04-08  David Lawrence Ramsey  <pooka109@gmail.com>
	* src/nano.c (main): Convert the literal UTF-8 whitespace string into
	its corresponding byte sequence, and add a comment for it.
	* src/{files.c,global.c,help.c,winio.c}: Reformat some comment blocks,
	fix a few typos, and remove a few unneeded blank lines.

2014-04-08  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c (parse_binding): Melt the binding and unbinding code,
	which are very similar, into a single function.