@@ -8,6 +8,7 @@
 	* doc/syntax/{changelog,c,po}.nanorc: Some small extra colourings.
 	* configure.ac, doc/texinfo/nano.texi: Make --enable-tiny disable
 	the use of libmagic, and document the --disable-libmagic flag.
+	* src/nano.c (version): Print the correct --enable/--disable option.
 
 2014-04-10  Benno Schulenberg  <bensberg@justemail.net>
 	* doc/syntax/Makefile.am: Add four recent syntaxes to the packlist.
